...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewDDName"
        app:layout_constraintVertical_bias="0.019999999" />

    <ListView
        android:id="@+id/listViewDD"
        android:layout_width="350dp"
        android:layout_height="500dp"
        android:layout_margin="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
...
