...
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewODTitle"
        app:layout_constraintVertical_bias="0.121" />

    <Button
        android:id="@+id/buttonBack"
        android:layout_width="87dp"
        android:layout_height="36dp"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
