...
        android:text="Add to cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLDTotalCost" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLDBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="149dp"
        android:text="back"
...
